[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "binance>=0.3.5",
    "cryptography>=44.0.2",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-binance>=1.0.28",
    "python-telegram-bot>=22.0",
    "sqlalchemy>=2.0.40",
    "telegram>=0.0.1",
    "werkzeug>=3.1.3",
]
